--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h3>WORLD COUNTRIES WITH REST API</h3>
       <header>
         <div id="total-count">0 countries</div>
-        <div id="page-count">Page: 1/5</div>
+        <div id="page-count">Page:</div>
         <input
           id="search"
           type="text"
@@ -49,13 +49,13 @@
           <div><b>Pop: </b> 100</div>
         </div> -->
         <!-- <div><b>Cap:</b> <strong style="color: red">None</strong></div> -->
-      </div>
+      <!-- </div>
       <div id="api-link">
         Rest api link:
         <a target="_new" href="https://restcountries.com/v3.1/all">
           https://restcountries.com/v3.1/all
         </a>
-      </div>
+      </div> -->
     </div>
     <script src="script.js"></script>
     <script
